--- a/API/Employee.Application/Employee.Application.csproj
+++ b/API/Employee.Application/Employee.Application.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Command\AuthenticationReleted\Login\" />
-    <Folder Include="Command\EmployeeReleted\DeleteEmployee\" />
+    <Folder Include="Command\EmployeeReleted\UpdateEmployeeByEmployee\" />
   </ItemGroup>
 
   <ItemGroup>
