--- a/API/Employee.Domain/Employee.Domain.csproj
+++ b/API/Employee.Domain/Employee.Domain.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="MailKit" Version="4.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="SendGrid" Version="9.29.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
   </ItemGroup>
 
 </Project>
